test/files/neg/t909.check
t909.scala:6: error: type mismatch;
 found   : "Hello".type (with underlying type String)
 required: Int
                        case Foo("Hello") =>
                                 ^
one error found
